--- a/_config.yml
+++ b/_config.yml
@@ -232,3 +232,11 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+# The options for the Juncture layout, which provides enhanced features for content presentation and interaction.
+juncture:
+  mode: flat                 # default layout style: flat or 2col
+  mode_toggle: true           # Enable the toggle button to switch between 2col and flat styles
+  auto_float: true            # auto float embeds
+  group_embeds: true          # group adjacent embeds as tabs or carousels
+  wikidata_info_popups: true  # show Wikidata-style info popups for links to Wikidata entities
