--- a/_config.yml
+++ b/_config.yml
@@ -241,4 +241,4 @@ juncture:
   group_embeds: true          # group adjacent embeds as tabs or carousels
   wikidata_info_popups: true  # show Wikidata-style info popups for links to Wikidata entities
 
-cloudinary_cloud: dmceci9t1
+cloudinary_cloud_name: dmceci9t1
